@@ -35,14 +35,18 @@
 #if APR_HAVE_SYS_UN_H
 #include <sys/un.h>
 #endif
+#if APR_HAVE_UUID_UUID_H
+#include <uuid/uuid.h>
+#endif
+#if APR_HAVE_UUID_H
+#include <uuid.h>
+#endif
 
 #ifndef SHUT_RDWR
 #define SHUT_RDWR 2
 #endif
 
 #if HAVE_UUID_CREATE
-
-#include <uuid.h>
 
 APR_DECLARE(apr_status_t) apr_os_uuid_get(unsigned char *uuid_data)
 {
@@ -55,9 +59,7 @@ APR_DECLARE(apr_status_t) apr_os_uuid_get(unsigned char *uuid_data)
     return APR_SUCCESS;
 }
 
-#elif HAVE_LIBUUID
-
-#include <uuid/uuid.h>
+#elif HAVE_UUID_GENERATE
 
 APR_DECLARE(apr_status_t) apr_os_uuid_get(unsigned char *uuid_data)
 {
